--- a/config.json
+++ b/config.json
@@ -2457,15 +2457,18 @@
     },
     {
       "title": "Undersida",
-      "name": "subpage"
+      "name": "subpage",
+      "default_blocks": ["navigation", "header", "team", "footer"]
     },
     {
       "title": "Blogg",
-      "name": "blog-page"
+      "name": "blog-page",
+      "default_blocks": ["navigation", "header", "footer"]
     },
     {
       "title": "Kontaktsida",
-      "name": "contact-page"
+      "name": "contact-page",
+      "default_blocks": ["navigation", "header", "contact", "footer"]
     }
   ],
   "blocks_default": [],
