--- a/config.json
+++ b/config.json
@@ -1837,6 +1837,32 @@
         "description": "This is my one page website and it's beautiful!"
       }
     },
+    "pages": {
+      "startpage": {
+        "settings": {
+          "title": "Agency - Start Bootstrap Theme",
+          "description": "This is my one page website and it's beautiful!"
+        }
+      },
+      "subpage": {
+        "settings": {
+          "title": "Agency - Start Bootstrap Theme",
+          "description": "This is my one page website and it's beautiful!"
+        }
+      },
+      "blog-page": {
+        "settings": {
+          "title": "Agency - Start Bootstrap Theme",
+          "description": "This is my one page website and it's beautiful!"
+        }
+      },
+      "contact-page": {
+        "settings": {
+          "title": "Agency - Start Bootstrap Theme",
+          "description": "This is my one page website and it's beautiful!"
+        }
+      }
+    },
     "blocks": {
       "navigation": {
         "logo_text": "The Page",
