--- a/config.json
+++ b/config.json
@@ -350,6 +350,9 @@
         "title": "Navigation",
         "name": "NavigationReact",
         "icon": "navicon",
+        "global": true,
+        "static": true,
+        "hidden": true,
         "properties": {
           "logo_text": {
             "type": "string",
@@ -738,6 +741,7 @@
         "title": "Header",
         "name": "HeaderReact",
         "icon": "image",
+        "hidden": true,
         "properties": {
           "subtitle": {
             "type": "string",
@@ -1680,6 +1684,7 @@
         "title": "Sidfot",
         "name": "FooterReact",
         "icon": "address-card-o",
+        "hidden": true,
         "properties": {
           "copyright_text": {
             "type": "string",
@@ -1755,6 +1760,7 @@
         "title": "Decoration",
         "name": "decoration",
         "icon": "image",
+        "hidden": true,
         "properties": {
           "image": {
             "type": "string",
