--- a/config.json
+++ b/config.json
@@ -96,9 +96,9 @@
         "title": "Navigation",
         "name": "navigation",
         "icon": "navicon",
-        "global": true,
-        "static": true,
-        "hidden": true,
+        "lobal": true,
+        "tatic": true,
+        "idden": true,
         "properties": {
           "logo_text": {
             "type": "string",
@@ -1610,9 +1610,9 @@
         "title": "Sidfot",
         "name": "footer",
         "icon": "address-card-o",
-        "global": true,
-        "static": true,
-        "hidden": true,
+        "lobal": true,
+        "tatic": true,
+        "idden": true,
         "properties": {
           "copyright_text": {
             "type": "string",
