--- a/config.json
+++ b/config.json
@@ -1931,8 +1931,8 @@
         ],
         "style": {
           "navbar": {
-            "transparent": false,
-            "sticky": false,
+            "transparent": true,
+            "sticky": true,
             "bg_color": "#222",
             "padding_top": 25,
             "padding_bottom": 25,
