--- a/config.json
+++ b/config.json
@@ -1931,7 +1931,7 @@
         ],
         "style": {
           "navbar": {
-            "transparent": true,
+            "transparent": false,
             "sticky": true,
             "bg_color": "#222",
             "padding_top": 25,
