--- a/config.json
+++ b/config.json
@@ -1933,11 +1933,11 @@
           "navbar": {
             "transparent": false,
             "sticky": true,
-            "bg_color": "#222",
+            "bg_color": "#fff",
             "padding_top": 25,
             "padding_bottom": 25,
-            "border_bottom_width": 0,
-            "border_bottom_color": "transparent",
+            "border_bottom_width": 1,
+            "border_bottom_color": "#f1f1f1",
             "show_overlay": false,
             "overlay_bg_color": "#000000",
             "overlay_opacity": 20,
