--- a/config.json
+++ b/config.json
@@ -1933,7 +1933,7 @@
           "navbar": {
             "transparent": true,
             "sticky": true,
-            "bg_color": "#fff",
+            "bg_color": "#222",
             "padding_top": 25,
             "padding_bottom": 25,
             "border_bottom_width": 0,
